@@ -1,13 +1,20 @@
 package controller;
 
+import javafx.application.Platform;
+import javafx.geometry.HPos;
 import javafx.scene.image.Image;
+import javafx.scene.layout.GridPane;
 import model.*;
 import service.PokeApiService;
 import view.screens.PokedexView;
+
 import java.sql.SQLException;
 import java.util.List;
+import java.util.Objects;
+
 import javafx.scene.control.Alert;
 import javafx.scene.control.ButtonType;
+import javafx.scene.media.AudioClip;
 
 public class PokedexController {
     // Data Base
@@ -23,33 +30,51 @@ public class PokedexController {
     public PokedexController(PokedexView view) {
         this.view = view;
 
+        view.searchBox.searchField.textProperty().addListener((
+                observable,
+                oldValue,
+                newValue) -> {
+            previewPokemonFromSearchBox(newValue);
+
+            if (newValue.isEmpty()) {
+                displayLeftPreview(null);
+            }
+        });
+
+        view.searchBox.randomButton.setOnAction(e -> {
+            // Math.Random generate between 0 and 1. +1 to avoid 0.
+            int randomId = (int) (Math.random() * 1000) + 1;
+            // Set the random ID in the search field
+            view.searchBox.searchField.setText(String.valueOf(randomId));
+        });
+
         view.searchBox.catchButton.setOnAction(e -> loadFromApi());
 
+        // When a Pokemon is selected in the captured list, display its details in the Pokédex card.
         view.capturedListView.listView.getSelectionModel().selectedItemProperty().addListener(
                 (observable, oldValue, newValue) -> {
                     if (newValue == null) {
                         return;
                     }
-                    try {
-                        //TODO: Try with array method.
-                        for (Pokemon pokemon : pokemonDAO.lister()) {
-                            if (pokemon.name.equals(newValue)) {
-
-                                List<PokemonTypes> pokemonTypes = service.recupererPokemonTypes(pokemon.id);
-
-                                displayCardPokedex(pokemon, pokemonTypes);
-                                break;
+                    new Thread(() -> {
+                        try {
+                            //TODO: Try with array method.
+                            for (Pokemon pokemon : pokemonDAO.lister()) {
+                                if (pokemon.name.equals(newValue)) {
+                                    List<Type> types = recupererTypesPokemon(pokemon.id);
+                                    Platform.runLater(() -> displayCardPokedex(pokemon, types));
+                                    evolutionChain(pokemon);
+                                    break;
+                                }
                             }
+                        } catch (Exception e) {
+                            Platform.runLater(() -> showErrorPopup("Not able to load selected Pokemon."));
                         }
-                    } catch (SQLException ex) {
-                        throw new RuntimeException(ex);
-                    } catch (Exception e) {
-                        throw new RuntimeException(e);
-                    }
+                    }).start();
                 }
         );
 
-        view.capturedListView.deleteButton.setOnAction(e -> {
+        view.capturedListView.releaseButton.setOnAction(e -> {
             // Get the selected Pokemon name from the list view.
             String selectedPokemon = view.capturedListView.listView.getSelectionModel().getSelectedItem();
 
@@ -58,25 +83,21 @@ public class PokedexController {
                 return;
             }
 
-            if (!confirmDeletePopUp(selectedPokemon)) {
+            if (!confirmReleasePopUp(selectedPokemon)) {
                 return;
             }
 
-            deletePokemon(selectedPokemon);
-            try {
-                displayCardPokedex(null, null);
-            } catch (Exception ex) {
-                throw new RuntimeException(ex);
-            }
+            releasePokemon(selectedPokemon);
+            displayCardPokedex(null, null);
         });
 
-        // To see the preview of the pokemon before catching it.
-        view.searchBox.searchField.textProperty().addListener((observable, oldValue, newValue) -> {
-            previewPokemonFromSearchBox(newValue);
-            if (newValue == null || newValue.isEmpty()) {
-                displayLeftPreview(null);
-            }
-        });
+        // Captured count label update
+        try {
+            int capturedCount = pokemonDAO.lister().size();
+            view.capturedCountLabel.setText("Captured: " + capturedCount);
+        } catch (SQLException ex) {
+            showErrorPopup("Not able to load Pokemon list.");
+        }
     }
 
     /**
@@ -91,60 +112,67 @@ public class PokedexController {
         alert.setContentText(message);
         alert.showAndWait();
     }
+
     /**
-     * Displays a confirmation dialog before deleting a Pokemon.
+     * Displays a confirmation dialog before deleting a Pokémon.
      *
-     * @param pokemonName The name of the Pokemon to delete.
+     * @param pokemonName The name of the Pokémon to delete.
      * @return true if the user confirms the deletion, false otherwise.
      */
-    private boolean confirmDeletePopUp(String pokemonName) {
+    private boolean confirmReleasePopUp(String pokemonName) {
         Alert alert = new Alert(Alert.AlertType.CONFIRMATION);
-        alert.setTitle("Confirm delete");
+        alert.setTitle("Confirm release");
         alert.setHeaderText(null);
-        alert.setContentText("Delete " + pokemonName + "?");
+        alert.setContentText("Release " + pokemonName + "?");
 
         return alert.showAndWait().orElse(ButtonType.CANCEL) == ButtonType.OK;
     }
 
     private void loadFromApi() {
-        int id;
-        try {
-            id = Integer.parseInt(view.searchBox.searchField.getText());
-        } catch (NumberFormatException e) {
-            showErrorPopup("Invalid ID. Please enter a valid integer.");
+        String idOrName = view.searchBox.searchField.getText().strip();
+
+        if (idOrName.isBlank()) {
+            showErrorPopup("Invalid Name or ID, please enter valid Name or ID");
             return;
         }
 
-        System.out.println("Loading Pokemon with ID: " + id);
-        try {
-            // Retrieve Pokemon data from the API
-            Pokemon pokemon = service.recupererPokemon(id);
-            List<PokemonTypes> pokemonTypes = service.recupererPokemonTypes(pokemon.id);
+        // Load the Pokemon in a separate thread to avoid blocking the UI
+        new Thread(() -> {
+            try {
+                Pokemon pokemon;
 
-            // Save the Pokemon data to the database
-            pokemonDAO.sauvegarder(pokemon);
-            for (PokemonTypes pokemonType : pokemonTypes) {
-                // Save the Pokemon type data to the database
-                pokemonTypesDAO.sauvegarder(pokemonType);
+                if (idOrName.matches("^[0-9]+$")) {
+                    System.out.println("Loading Pokemon with ID " + idOrName);
+                    pokemon = service.recupererPokemon(Integer.parseInt(idOrName));
+                } else {
+                    System.out.println("Loading Pokemon with Name: " + idOrName);
+                    pokemon = service.recupererPokemonParNom(idOrName);
+                }
+
+                List<PokemonTypes> pokemonTypes = service.recupererPokemonTypes(pokemon.id);
+                List<Type> types = recupererTypesPokemon(pokemonTypes);
+
+                pokemonDAO.sauvegarder(pokemon);
+                for (PokemonTypes pokemonType : pokemonTypes) {
+                    pokemonTypesDAO.sauvegarder(pokemonType);
+                }
+
+                Platform.runLater(() -> {
+                    displayCardPokedex(pokemon, types);
+                    refreshList();
+                });
+            } catch (Exception e) {
+                Platform.runLater(() -> showErrorPopup("Invalid Name or ID. Please enter a valid Pokemon."));
             }
-
-            displayCardPokedex(pokemon, pokemonTypes);
-            refreshList();
-
-        } catch (Exception e) {
-            // TODO: Display error on screen instead of printing to console
-            // Handle exceptions (e.g., show an error message in the view)
-            System.err.println("Error loading Pokemon: " + e.getMessage());
-        }
+        }).start();
     }
 
     /**
-     * Deletes a Pokemon from the database by its name.
+     * Deletes a Pokémon from the database by its name.
      *
-     * @param name The name of the Pokemon to delete.
+     * @param name The name of the Pokémon to release.
      */
-    private void deletePokemon(String name) {
-        // TODO: Add confirmation dialog before deletion
+    private void releasePokemon(String name) {
         try {
             //TODO: Try with array method.
             for (Pokemon pokemon : pokemonDAO.lister()) {
@@ -154,8 +182,6 @@ public class PokedexController {
                     break;
                 }
             }
-        } catch (SQLException ex) {
-            throw new RuntimeException(ex);
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
@@ -163,7 +189,7 @@ public class PokedexController {
     }
 
     /**
-     * Refreshes the list view of captured Pokemon in the PokedexView.
+     * Refreshes the list view of captured Pokémon in the PokedexView.
      * Clears the current items in the list view and repopulates it with the latest data from the database.
      */
     private void refreshList() {
@@ -175,8 +201,17 @@ public class PokedexController {
                 view.capturedListView.listView.getItems().add(pokemon.name);
             }
         } catch (Exception e) {
-            // TODO: Display error on screen instead of printing to console
-            System.err.println("Error loading Pokemon: " + e.getMessage());
+            showErrorPopup("Not able to load Pokemon list.");
+        }
+        refreshCapturedCount();
+    }
+
+    private void refreshCapturedCount() {
+        try {
+            int capturedCount = pokemonDAO.lister().size();
+            view.capturedCountLabel.setText("Captured: " + capturedCount);
+        } catch (SQLException ex) {
+            showErrorPopup("Not able to load Pokemon list.");
         }
     }
 
@@ -185,63 +220,99 @@ public class PokedexController {
     }
 
     /**
-     * Displays the details of a Pokemon in the PokedexView.
+     * Displays the details of a Pokémon in the PokedexView.
      *
-     * @param pokemon The Pokemon object containing the details to display.
+     * @param pokemonId The ID of the Pokémon to display.
      */
-    private void displayCardPokedex(Pokemon pokemon, List<PokemonTypes> pokemonTypes) throws Exception {
+    private List<Type> recupererTypesPokemon(int pokemonId) throws Exception {
+        return recupererTypesPokemon(service.recupererPokemonTypes(pokemonId));
+    }
+
+    private List<Type> recupererTypesPokemon(List<PokemonTypes> pokemonTypes) throws Exception {
+        List<Type> types = new java.util.ArrayList<>();
+
+        for (PokemonTypes pokemonType : pokemonTypes) {
+            types.add(service.recupererType(pokemonType.type_id));
+        }
+
+        return types;
+    }
+
+    private void displayCardPokedex(Pokemon pokemon, List<Type> pokemonTypes) {
         // Update the view with the Pokemon data
         if (pokemon != null) {
             // sprite
             Image sprite = new Image(pokemon.sprites);
-            view.filterView.imageView.pokemonImage.setImage(sprite);
+            // name
+            view.selectedPokemonFilterBox.pokemonNameLabel.setText(pokemon.name);
+            // image
+            view.selectedPokemonFilterBox.imageView.pokemonImage.setImage(sprite);
             // stats
-            view.filterView.statsView.hp.setText(String.valueOf(pokemon.hp));
-            view.filterView.statsView.attack.setText(String.valueOf(pokemon.attack));
-            view.filterView.statsView.defense.setText(String.valueOf(pokemon.defense));
-            view.filterView.statsView.specialAttack.setText(String.valueOf(pokemon.special_attack));
-            view.filterView.statsView.specialDefense.setText(String.valueOf(pokemon.special_defense));
-            view.filterView.statsView.speed.setText(String.valueOf(pokemon.speed));
+            view.selectedPokemonFilterBox.statsView.hp.setText(String.valueOf(pokemon.hp));
+            view.selectedPokemonFilterBox.statsView.attack.setText(String.valueOf(pokemon.attack));
+            view.selectedPokemonFilterBox.statsView.defense.setText(String.valueOf(pokemon.defense));
+            view.selectedPokemonFilterBox.statsView.specialAttack.setText(String.valueOf(pokemon.special_attack));
+            view.selectedPokemonFilterBox.statsView.specialDefense.setText(String.valueOf(pokemon.special_defense));
+            view.selectedPokemonFilterBox.statsView.speed.setText(String.valueOf(pokemon.speed));
             // id
-            view.filterView.id = pokemon.id;
+            view.selectedPokemonFilterBox.id = pokemon.id;
+            view.selectedPokemonFilterBox.pokemonIdLabel.setText("#" + pokemon.id);
             // types
-            // TODO: ----
-            if (pokemonTypes.size() >= 1) {
-                Type typeOne = service.recupererType(pokemonTypes.get(0).type_id);
-                view.filterView.typesView.typeOne.setText(typeOne.name);
-                view.filterView.typesView.typeOne.getStyleClass().clear();
-                view.filterView.typesView.typeOne.getStyleClass().add(typeOne.name);
-                view.filterView.typesView.typeOne.getStyleClass().add("pokemon-type");
+            if (!pokemonTypes.isEmpty()) {
+                Type typeOne = pokemonTypes.getFirst();
+                view.selectedPokemonFilterBox.typesView.typeOne.setText(typeOne.name);
+                view.selectedPokemonFilterBox.typesView.typeOne.getStyleClass().clear();
+                view.selectedPokemonFilterBox.typesView.typeOne.getStyleClass().add(typeOne.name);
+                view.selectedPokemonFilterBox.typesView.typeOne.getStyleClass().add("pokemon-type");
             }
+            // Click event to play his cry when clicked
+            view.selectedPokemonFilterBox.imageView.pokemonImage.setOnMouseClicked(e ->
+                    playPokemonCry());
 
             if (pokemonTypes.size() >= 2) {
-                Type typeTwo = service.recupererType(pokemonTypes.get(1).type_id);
-                view.filterView.typesView.typeTwo.setText(typeTwo.name);
-                view.filterView.typesView.typeTwo.getStyleClass().clear();
-                view.filterView.typesView.typeTwo.getStyleClass().add(typeTwo.name);
-                view.filterView.typesView.typeTwo.getStyleClass().add("pokemon-type");
+                Type typeTwo = pokemonTypes.get(1);
+                view.selectedPokemonFilterBox.typesView.typeTwo.setText(typeTwo.name);
+                view.selectedPokemonFilterBox.typesView.typeTwo.getStyleClass().clear();
+                view.selectedPokemonFilterBox.typesView.typeTwo.getStyleClass().add(typeTwo.name);
+                view.selectedPokemonFilterBox.typesView.typeTwo.getStyleClass().add("pokemon-type");
+                // Show the second type and adjust the layout to accommodate it
+                view.selectedPokemonFilterBox.typesView.typeTwo.setVisible(true);
+                view.selectedPokemonFilterBox.typesView.typeTwo.setManaged(true);
+                GridPane.setColumnSpan(view.selectedPokemonFilterBox.typesView.typeOne, 1);
+                GridPane.setHalignment(view.selectedPokemonFilterBox.typesView.typeOne, HPos.LEFT);
             } else {
-                view.filterView.typesView.typeTwo.setText("-");
-                view.filterView.typesView.typeTwo.getStyleClass().clear();
+                // No second type, put the first into two columns
+                view.selectedPokemonFilterBox.typesView.typeTwo.setText("");
+                view.selectedPokemonFilterBox.typesView.typeTwo.getStyleClass().clear();
+                view.selectedPokemonFilterBox.typesView.typeTwo.setVisible(false);
+                view.selectedPokemonFilterBox.typesView.typeTwo.setManaged(false);
+                GridPane.setColumnSpan(view.selectedPokemonFilterBox.typesView.typeOne, 2);
+                GridPane.setHalignment(view.selectedPokemonFilterBox.typesView.typeOne, HPos.CENTER);
             }
 
         } else {
             // Clear the view if no Pokemon is provided
-            view.filterView.imageView.pokemonImage.setImage(null);
-            view.filterView.statsView.hp.setText("");
-            view.filterView.statsView.attack.setText("");
-            view.filterView.statsView.defense.setText("");
-            view.filterView.statsView.specialAttack.setText("");
-            view.filterView.statsView.specialDefense.setText("");
-            view.filterView.statsView.speed.setText("");
-            view.filterView.id = 0;
+            view.selectedPokemonFilterBox.imageView.pokemonImage.setImage(null);
+            view.selectedPokemonFilterBox.statsView.hp.setText("");
+            view.selectedPokemonFilterBox.statsView.attack.setText("");
+            view.selectedPokemonFilterBox.statsView.defense.setText("");
+            view.selectedPokemonFilterBox.statsView.specialAttack.setText("");
+            view.selectedPokemonFilterBox.statsView.specialDefense.setText("");
+            view.selectedPokemonFilterBox.statsView.speed.setText("");
+            view.selectedPokemonFilterBox.id = 0;
+            view.selectedPokemonFilterBox.pokemonIdLabel.setText("");
+            view.selectedPokemonFilterBox.pokemonNameLabel.setText("");
+            view.selectedPokemonFilterBox.typesView.typeOne.setText("");
+            view.selectedPokemonFilterBox.typesView.typeOne.getStyleClass().clear();
+            view.selectedPokemonFilterBox.typesView.typeTwo.setText("");
+            view.selectedPokemonFilterBox.typesView.typeTwo.getStyleClass().clear();
         }
     }
 
     /**
-     * Displays a preview of the Pokemon before catch on the left side of the PokedexView.
+     * Displays a preview of the Pokémon before catch on the left side of the PokedexView.
      *
-     * @param pokemon The Pokemon object containing the details to preview.
+     * @param pokemon The Pokémon object containing the details to preview.
      */
     private void displayLeftPreview(Pokemon pokemon) {
         if (pokemon != null) {
@@ -252,6 +323,13 @@ public class PokedexController {
             view.statsGrid.specialAttack.setText(String.valueOf(pokemon.special_attack));
             view.statsGrid.specialDefense.setText(String.valueOf(pokemon.special_defense));
             view.statsGrid.speed.setText(String.valueOf(pokemon.speed));
+
+            // Click event for the preview Pokemon image in the left box
+            view.pokemonImageFrame.pokemonImage.setOnMouseClicked(e ->
+                playPokemonCry());
+
+            view.pokemonNameLabel.setText(pokemon.name);
+
         } else {
             // Clear the preview if no Pokemon is provided
             view.pokemonImageFrame.pokemonImage.setImage(null);
@@ -265,24 +343,71 @@ public class PokedexController {
     }
 
     /**
-     * Previews a Pokemon based on the text entered in the search box.
+     * Previews a Pokémon based on the text entered in the search box.
      * If the text is empty, it does nothing. If the text can be parsed as an integer,
-     * it attempts to retrieve the Pokemon with that ID from the API and display its preview.
+     * it attempts to retrieve the Pokémon with that ID from the API and display its preview.
      *
      * @param text The text entered in the search box.
      */
     private void previewPokemonFromSearchBox(String text) {
-        if (text.isEmpty()) {
+        if (text.isBlank()) {
             return;
         }
 
-        try {
-            int id = Integer.parseInt(text);
-            Pokemon pokemon = service.recupererPokemon(id);
-            displayLeftPreview(pokemon);
-        } catch (Exception e) {
-            // TODO: Display error on screen instead of printing to console
-            System.err.println("Error previewing Pokemon: " + e.getMessage());
-        }
+        String searchedText = text.strip();
+
+        // Load the Pokemon in a separate thread to avoid blocking the UI
+        new Thread(() -> {
+            try {
+                Pokemon pokemon;
+
+                if (searchedText.matches("^[0-9]+$")) {
+                    pokemon = service.recupererPokemon(Integer.parseInt(searchedText));
+                } else {
+                    pokemon = service.recupererPokemonParNom(searchedText);
+                }
+
+                Platform.runLater(() -> {
+                    if (view.searchBox.searchField.getText().strip().equals(searchedText)) {
+                        displayLeftPreview(pokemon);
+                    }
+                });
+            } catch (Exception e) {
+                Platform.runLater(() -> {
+                    if (view.searchBox.searchField.getText().strip().equals(searchedText)) {
+                        displayLeftPreview(null);
+                    }
+                });
+                System.err.println("Error previewing Pokemon: " + e.getMessage());
+            }
+        }).start();
+    }
+
+    // Plays the cry sound of the given Pokémon. Do not work with url because it does not support .ogg format.
+    private void playPokemonCry() {
+        String soundUrl = Objects.requireNonNull(getClass().getResource("/sounds/pokemon.mp3")).toExternalForm();
+        AudioClip sound = new AudioClip(soundUrl);
+        sound.play();
+    }
+
+    /**
+     * Retrieves the evolution chain for a given Pokémon and updates the evolutions box in the view.
+     *
+     * @param pokemon The Pokémon for which to retrieve the evolution chain.
+     */
+    private void evolutionChain(Pokemon pokemon) {
+        new Thread(() -> {
+            try {
+                List<Pokemon> evolutions = service.recupererEvolutionParId(pokemon.id);
+
+                for (Pokemon e : evolutions) {
+                    System.out.println("Evolution: " + e.name);
+                }
+
+                Platform.runLater(() -> view.evolutionsBox.setEvolutions(evolutions));
+            } catch (Exception e) {
+                Platform.runLater(() -> showErrorPopup("Not able to load evolution chain for " + pokemon.name));
+            }
+        }).start();
     }
 }
